--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:mysql://185.8.165.21:3306/csdemo
 spring.datasource.username=csdemo
 spring.datasource.password=
 spring.jpa.generate-ddl=true
+server.port=5000
+
+
 
 csdemo.app.jwtSecret=
 csdemo.app.jwtExpirationMs= 86400000
